# 2048-SDL3

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.ps1  compile_commands.json  run.bat
.cache/clangd/index/: SDL.h.1A000DB0E2984FDA.idx  SDL_assert.h.A9286811786A5F9A.idx  SDL_asyncio.h.6D12A28A6C249A30.idx  SDL_atomic.h.B72D7A6AE7AF4169.idx  SDL_audio.h.88E0D61DA2F95434.idx  SDL_begin_code.h.9AD1FEC0D3819CD0.idx  SDL_bits.h.BAB117CAA721A089.idx  SDL_blendmode.h.4ACBCD4615E17B84.idx  SDL_camera.h.472CE34F0C98D922.idx  SDL_clipboard.h.5E1EF2E6CA3224AB.idx  SDL_close_code.h.3CE3142FB9CA9846.idx  SDL_cpuinfo.h.5E876F1341EC756E.idx  SDL_dialog.h.D45924E46C895854.idx  SDL_endian.h.B061F8D7CD0BA89D.idx  SDL_error.h.B0B76E110B3A41FA.idx  SDL_events.h.A9144FF8CCB83977.idx  SDL_filesystem.h.E7B9AA79D6E66376.idx  SDL_gamepad.h.084DE1497AC7CF28.idx  SDL_gpu.h.9AEA29C8333E767A.idx  SDL_guid.h.7360EFEDB828D81B.idx  SDL_haptic.h.680AEDB9FF7B6B24.idx  SDL_hidapi.h.5F0E702D85872196.idx  SDL_hints.h.3C4CBFECAD246EAF.idx  SDL_init.h.773FE4A2FF98D069.idx  SDL_iostream.h.DD6DA1ECBA5E3928.idx  SDL_joystick.h.70F2EE4AAB368FC8.idx  SDL_keyboard.h.FF453482E390D76A.idx  SDL_keycode.h.0CDA448432C2EE19.idx  SDL_loadso.h.88D6356FEEA038D9.idx  SDL_locale.h.942050FEB1EC6ECF.idx  SDL_log.h.E50FD33C2BE9E960.idx  SDL_main.h.BE6CFCAFFCEA6DCF.idx  SDL_main_impl.h.1CD3D159AB4E2596.idx  SDL_messagebox.h.61B0E9171ACC6121.idx  SDL_metal.h.98D0CB2BCE919206.idx  SDL_misc.h.5B82DEDD6AB5715C.idx  SDL_mouse.h.3CC5F6D7C80D6328.idx  SDL_mutex.h.B33B4210335C53BA.idx  SDL_oldnames.h.BB17AAFFB387F2E9.idx  SDL_pen.h.2171C9690CD3D040.idx  (+22 more)
src/: main.cpp
